package org.hfeng.misc.hfdp.ch1.strategy;

public interface FlyBehavior {
    public void fly();
}
