package org.hfeng.misc.hfdp.ch1.strategy;

public class FlyWithWings implements FlyBehavior {
    public void fly() {
        System.out.println("Fly with Wings");
    }
}
