package org.hfeng.misc.hfdp.ch1.strategy;

public class MuteQuack implements QuackBehavior {
    public void quack() {
        System.out.println("Mute Quack");
    }
}
