package org.hfeng.misc.hfdp.ch1.strategy;

public class Quack implements QuackBehavior {
    public void quack() {
        System.out.println("Quack normally");
    }
}
