package org.hfeng.misc.hfdp.ch1.strategy;

public interface QuackBehavior {
    public void quack();
}
